<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:padding="@dimen/_8sdp"
    android:background="@drawable/sleep_notification"
    android:gravity="center_vertical">

    <ImageView
        android:id="@+id/notification_album_art_sleep"
        android:layout_width="@dimen/_48sdp"
        android:layout_height="@dimen/_48sdp"
        android:contentDescription="@string/imagemusic"
        android:src="@drawable/sleep_notification_icon"
        android:scaleType="centerCrop"
        android:layout_marginEnd="@dimen/_8sdp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/notification_title_sleep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sleep_music"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:id="@+id/notification_artist_sleep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/artist"
            android:textColor="@color/white"
            android:textSize="@dimen/_10ssp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/notification_prev_sleep"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:src="@drawable/sleep_prev"
        android:layout_marginEnd="@dimen/_5sdp"
        android:contentDescription="@string/previous" />

    <ImageView
        android:id="@+id/notification_play_pause_Sleep"
        android:layout_width="@dimen/_32sdp"
        android:layout_height="@dimen/_32sdp"
        android:src="@drawable/sleep_pause"
        android:contentDescription="@string/play_pause" />

    <ImageView
        android:id="@+id/notification_next_sleep"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:src="@drawable/sleep_next"
        android:layout_marginStart="@dimen/_5sdp"
        android:contentDescription="@string/next" />
</LinearLayout>
