<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="20dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/ivCancelDialogForgotPass"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_gravity="end"
        android:src="@drawable/cancle" />

    <EditText
        android:id="@+id/edtNewPassForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:drawableEnd="@drawable/hide"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/edtRePassForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/re_enter_password"
        android:inputType="textPassword"
        android:drawableEnd="@drawable/hide"
        android:layout_marginTop="12dp" />

    <Button
        android:id="@+id/btnSavePassForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_marginTop="20dp" />
</LinearLayout>
